Update guarantee text for clarity

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ langSelector.addEventListener("change", () => {
         <li>✔ <strong>Amélioration rapide de la fiabilité et de la stabilité</strong> de cette fonctionnalité</li>
       </ul>
       <div class="guarantee">
-        Garantie : Si après 45 jours les objectifs ne sont pas atteints, nous vous offrons <strong>2 à 3 jours de prestation supplémentaires</strong> sans frais.
+        Garantie 45 jours : Si après 45 jours les objectifs ne sont pas atteints, nous vous offrons <strong>2 à 3 jours de prestation supplémentaires</strong> sans frais.
       </div>
       <a href="#contact" class="cta-small">👉 Réserver mon audit gratuit</a>
     </div>
