--- a/index.html
+++ b/index.html
@@ -317,6 +317,21 @@
 
 /* Mobile first adjustments */
 @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
+  .hero {
+    padding: 40px 15px 60px 15px; /* moins de padding pour éviter que le texte soit caché */
+    text-align: center;
+  }
+
+  .hero h1 {
+    font-size: 1.5rem;  /* réduit légèrement pour que ça tienne sur l’écran */
+    line-height: 1.4;
+  }
+
+  .hero .highlight {
+    display: block; /* chaque portion de texte sur sa ligne */
+  }
+}
   .topbar {
     flex-direction: column;
     align-items: flex-start;
