--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 
 .hero-cards-fullwidth .card,
 .hero-cards-fullwidth .card-highlight {
-  background: linear-gradient(135deg, rgba(124,58,237,0.08), rgba(219,39,119,0.08));
-  border-left: 6px solid #db2777;
+  background: linear-gradient(135deg, rgba(0,0,0,0.03), rgba(0,0,0,0.05));
+  border-left: 6px solid #000000;
+  border: 2px solid #000000;
   border-radius: 12px;
   padding: 25px 20px;
   width: 100%;
-  box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
   transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.3s ease;
   text-align: left;
 }
@@ -30,14 +31,14 @@
 .hero-cards-fullwidth .card:hover,
 .hero-cards-fullwidth .card-highlight:hover {
   transform: translateY(-5px);
-  box-shadow: 0 12px 30px rgba(124,58,237,0.5);
-  background: linear-gradient(135deg, rgba(124,58,237,0.15), rgba(219,39,119,0.15));
+  box-shadow: 0 12px 30px rgba(0,0,0,0.12);
+  background: linear-gradient(135deg, rgba(0,0,0,0.05), rgba(0,0,0,0.08));
 }
 
 .hero-cards-fullwidth .card h3,
 .hero-cards-fullwidth .card-highlight h3 {
   font-size: 1.3rem;
-  color: #db2777;
+  color: #000000;
   margin-bottom: 15px;
   text-transform: uppercase;
   letter-spacing: 0.5px;
@@ -47,7 +48,7 @@
 .hero-cards-fullwidth .card-highlight ul {
   font-size: 1rem;
   line-height: 1.6;
-  color: #e5e7eb;
+  color: #4a5568;
 }
 
 .hero-cards-fullwidth .card-highlight ul {
@@ -62,10 +63,10 @@
 .hero-cards-fullwidth .card-highlight .guarantee {
   margin-top: 15px;
   padding: 15px;
-  border-left: 5px solid #db2777;
-  background: rgba(219,39,119,0.1);
+  border-left: 5px solid #000000;
+  background: rgba(0,0,0,0.05);
   font-weight: bold;
-  color: #fff;
+  color: #2d3748;
   border-radius: 8px;
   font-size: 0.95rem;
 }
@@ -77,10 +78,10 @@
 
 
     .hero {
-  background: radial-gradient(circle at top, rgba(124,58,237,0.2), transparent 60%), #020617;
+  background: radial-gradient(circle at top, rgba(100,116,139,0.1), transparent 60%), #ffffff;
   padding: 80px 20px;
   text-align: center;
-  border-bottom: 1px solid rgba(255,255,255,0.1);
+  border-bottom: 1px solid rgba(0,0,0,0.08);
     }
 
     .hero h1 {
@@ -91,7 +92,7 @@
     }
 
     .hero .highlight {
-    background: linear-gradient(90deg, #7c3aed, #db2777, #1e3a8a);
+    background: linear-gradient(90deg, #000000, #1a1a1a, #2d3748);
     background-clip: text;           /* standard */
     -webkit-background-clip: text;   /* Chrome / Safari */
     color: transparent;              /* standard way */
@@ -102,7 +103,7 @@
       max-width: 800px;
       margin: 0 auto 30px;
       font-size: 1.1rem;
-      color: #cbd5e1;
+      color: #64748b;
     }
 
     .hero .cta {
@@ -110,23 +111,23 @@
       padding: 16px 28px;
       border-radius: 10px;
       font-weight: bold;
-      background: linear-gradient(135deg, #7c3aed, #db2777, #1e3a8a);
+      background: linear-gradient(135deg, #000000, #1a1a1a);
       color: #fff;
       text-decoration: none;
       transition: transform 0.2s, box-shadow 0.2s;
-      box-shadow: 0 10px 25px rgba(124,58,237,0.4);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.25);
     }
 
     .hero .cta:hover {
       transform: translateY(-3px);
-      box-shadow: 0 15px 35px rgba(124,58,237,0.6);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.35);
     }
 
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
+      background: #f8f9fa;
+      color: #4a5568;
       line-height: 1.6;
       padding-top: 80px;
     }
@@ -139,12 +140,12 @@
       display: flex;
       gap: 20px;
       z-index: 1000;
-      background: rgba(2,6,23,0.95);
+      background: rgba(248,249,250,0.95);
       border-radius: 8px;
     }
 
     nav a {
-      color: #e5e7eb;
+      color: #4a5568;
       text-decoration: none;
       font-weight: bold;
       font-size: 0.95rem;
@@ -155,17 +156,17 @@
     }
 
     header {
-      background: #020617;
+      background: #ffffff;
       padding: 40px 20px;
       text-align: center;
-      border-bottom: 1px solid rgba(255,255,255,0.1);
+      border-bottom: 1px solid rgba(0,0,0,0.08);
     }
 
     .logo {
       font-size: 2.8rem;
       font-weight: bold;
       letter-spacing: 2px;
-      color: #db2777;
+      color: #000000;
       margin-bottom: 20px;
     }
 
@@ -180,16 +181,16 @@
     .tab-link {
       padding: 12px 24px;
       border-radius: 8px;
-      background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(255,255,255,0.2);
-      color: #fff;
+      background: rgba(0,0,0,0.04);
+      border: 1px solid rgba(0,0,0,0.1);
+      color: #4a5568;
       text-decoration: none;
       font-weight: bold;
       transition: all 0.2s ease;
     }
 
     .tab-link:hover {
-      background: rgba(255,255,255,0.1);
+      background: rgba(0,0,0,0.08);
       transform: translateY(-2px);
     }
 
@@ -200,7 +201,7 @@
     }
 
     h2 {
-    background: linear-gradient(90deg, #7c3aed, #db2777, #1e3a8a);
+    background: linear-gradient(90deg, #000000, #1a1a1a);
     background-clip: text;            /* standard */
     -webkit-background-clip: text;    /* Chrome / Safari */
     color: transparent;               /* standard */
@@ -215,17 +216,18 @@
     }
 
     .card {
-      background: #020617;
+      background: #ffffff;
       padding: 25px 20px;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      border: 2px solid #000000;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       transition: transform 0.3s, box-shadow 0.3s;
       text-align: center;
     }
 
     .card:hover {
       transform: translateY(-7px);
-      box-shadow: 0 12px 25px rgba(124,58,237,0.5);
+      box-shadow: 0 12px 25px rgba(99,102,241,0.15);
     }
 
     .card img {
@@ -236,23 +238,23 @@
     .card h3 {
       margin-bottom: 12px;
       font-size: 1.2rem;
-      color: #fff;
+      color: #2d3748;
     }
 
     .card p {
       font-size: 1rem;
-      color: #cbd5e1;
+      color: #64748b;
     }
 
     footer {
-      background: #020617;
+      background: #f1f5f9;
       text-align: center;
       padding: 30px 20px;
-      color: #94a3b8;
+      color: #64748b;
     }
 
     a {
-      color: #db2777;
+      color: #000000;
       text-decoration: none;
     }
 
@@ -265,20 +267,20 @@
   left: 0;
   right: 0;
   height: 70px;
-  background: rgba(2,6,23,0.95);
+  background: rgba(255,255,255,0.98);
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 30px;
   z-index: 2000;
-  border-bottom: 1px solid rgba(255,255,255,0.1);
+  border-bottom: 1px solid rgba(0,0,0,0.08);
 }
 
 .topbar .brand {
   font-size: 1.4rem;
   font-weight: bold;
   letter-spacing: 2px;
-  color: #db2777;
+  color: #000000;
 }
 
 .topbar .menu {
@@ -288,7 +290,7 @@
 }
 
 .topbar .menu a {
-  color: #e5e7eb;
+  color: #4a5568;
   text-decoration: none;
   font-weight: bold;
   font-size: 0.95rem;
@@ -303,16 +305,16 @@
   padding: 10px 18px;
   border-radius: 8px;
   font-weight: bold;
-  background: linear-gradient(135deg, #7c3aed, #db2777, #1e3a8a);
+  background: linear-gradient(135deg, #000000, #1a1a1a);
   color: #fff;
   text-decoration: none;
-  box-shadow: 0 8px 20px rgba(124,58,237,0.4);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .topbar .cta-audit:hover {
   transform: translateY(-2px);
-  box-shadow: 0 12px 28px rgba(124,58,237,0.6);
+  box-shadow: 0 12px 28px rgba(0,0,0,0.35);
 }
 
 /* Padding pour que le hero ne soit pas caché par la topbar */
@@ -511,34 +513,34 @@ langSelector.addEventListener("change", () => {
   <!-- Services -->
 <section id="services">
   <h2>
-    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#db2777" viewBox="0 0 24 24" style="vertical-align:middle; margin-right:8px;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#000000" viewBox="0 0 24 24" style="vertical-align:middle; margin-right:8px;">
       <path d="M2 21l21-9L2 3v7l15 2-15 2v7z"/>
     </svg>
     Services
   </h2>
   <div class="services">
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/64/ffffff/inspection.png" alt="Audit" />
+      <img src="https://img.icons8.com/ios-filled/64/000000/inspection.png" alt="Audit" />
       <h3>Audit de tests</h3>
       <p>Analyse complète de votre stratégie pour identifier forces, faiblesses et opportunités d’optimisation.</p>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/64/ffffff/settings.png" alt="Optimisation" />
+      <img src="https://img.icons8.com/ios-filled/64/000000/settings.png" alt="Optimisation" />
       <h3>Optimisation des tests</h3>
       <p>Réduction du temps d’exécution, meilleure couverture et fiabilité maximale des scénarios existants.</p>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/64/ffffff/git.png" alt="CI/CD" />
+      <img src="https://img.icons8.com/ios-filled/64/000000/git.png" alt="CI/CD" />
       <h3>CI/CD Automation</h3>
       <p>Intégration fluide de vos tests automatisés dans les pipelines pour des déploiements rapides et sécurisés.</p>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/64/ffffff/code.png" alt="Automatisation" />
+      <img src="https://img.icons8.com/ios-filled/64/000000/code.png" alt="Automatisation" />
       <h3>Automatisation de tests</h3>
       <p>Tests automatisés robustes et maintenables avec Playwright pour accélérer vos cycles de validation.</p>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/64/ffffff/shield.png" alt="Sécurité" />
+      <img src="https://img.icons8.com/ios-filled/64/000000/shield.png" alt="Sécurité" />
       <h3>Sécurité applicative</h3>
       <p>Identifiez et corrigez les failles avant qu’elles n’impactent vos utilisateurs.</p>
     </div>
@@ -546,7 +548,7 @@ langSelector.addEventListener("change", () => {
     <!-- Nouvelle carte Innovation -->
     <a href="https://ci-booster.lovable.app/" target="_blank" style="text-decoration:none;">
       <div class="card">
-        <img src="https://img.icons8.com/ios-filled/64/ffffff/light-on.png" alt="Innovation" />
+        <img src="https://img.icons8.com/ios-filled/64/000000/light-on.png" alt="Innovation" />
         <h3>Innovation</h3>
         <p>Réduisez d'au moins 30% les échecs et le temps perdu à analyser les erreurs CI/CD.</p>
       </div>
@@ -559,7 +561,7 @@ langSelector.addEventListener("change", () => {
 <!-- Expertise -->
 <section id="expertise">
   <h2>
-    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#db2777" viewBox="0 0 24 24" style="vertical-align:middle; margin-right:8px;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#000000" viewBox="0 0 24 24" style="vertical-align:middle; margin-right:8px;">
       <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
     </svg>
     Expertise
@@ -577,20 +579,90 @@ langSelector.addEventListener("change", () => {
   <section id="contact">
     <h2>📞 Contact</h2>
     <div style="display:flex; flex-wrap:wrap; gap:30px; justify-content:center;">
-      <div style="flex:1; min-width:280px; max-width:400px; background:#020617; padding:25px; border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.4);">
-        <h3>Mes coordonnées</h3>
-        <p>📧 Email : <a href="mailto:edembassine@gmail.com">edembassine@gmail.com</a></p>
-        <p>📱 Téléphone : <a href="tel:+33769476385">07 69 47 63 85</a></p>
-        <p>🔗 LinkedIn : <a href="https://www.linkedin.com/in/edem-bassine-6119a4118/" target="_blank">Voir mon profil</a></p>
-        <p style="margin-top:20px; font-size:0.95rem; color:#94a3b8;">Je réponds rapidement à toutes vos demandes. N’hésitez pas à me contacter pour un audit, conseil ou accompagnement QA.</p>
+      <div style="flex:1; min-width:280px; max-width:400px; background:#ffffff; padding:25px; border-radius:10px; border:2px solid #000000; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+        <h3 style="color:#000000;">Mes coordonnées</h3>
+        <p style="color:#2d3748;">📧 Email : <a href="mailto:edembassine@gmail.com">edembassine@gmail.com</a></p>
+        <p style="color:#2d3748;">📱 Téléphone : <a href="tel:+33769476385">07 69 47 63 85</a></p>
+        <p style="color:#2d3748;">🔗 LinkedIn : <a href="https://www.linkedin.com/in/edem-bassine-6119a4118/" target="_blank">Voir mon profil</a></p>
+        <p style="margin-top:20px; font-size:0.95rem; color:#4a5568;">Je réponds rapidement à toutes vos demandes. N'hésitez pas à me contacter pour un audit, conseil ou accompagnement QA.</p>
       </div>
 
-      <form style="flex:1; min-width:280px; max-width:400px; background:#020617; padding:25px; border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.4); display:flex; flex-direction:column; gap:12px;">
-        <input type="text" placeholder="Votre nom" required style="padding:12px; border-radius:6px; border:none; font-size:1rem;" />
-        <input type="email" placeholder="Votre email" required style="padding:12px; border-radius:6px; border:none; font-size:1rem;" />
-        <input type="tel" placeholder="Votre téléphone" style="padding:12px; border-radius:6px; border:none; font-size:1rem;" />
-        <textarea rows="5" placeholder="Décrivez votre besoin..." required style="padding:12px; border-radius:6px; border:none; font-size:1rem;"></textarea>
-        <button type="submit" style="padding:14px; border:none; border-radius:6px; font-weight:bold; background: linear-gradient(135deg, #7c3aed, #db2777, #1e3a8a); color:#fff; cursor:pointer; transition:all 0.2s;">Envoyer</button>
+      <form action="https://formsubmit.co/edembassine@gmail.com" method="POST" style="flex:1; min-width:280px; max-width:500px; background:#ffffff; padding:25px; border-radius:10px; border:2px solid #000000; box-shadow:0 4px 12px rgba(0,0,0,0.08); display:flex; flex-direction:column; gap:15px;">
+        
+        <input type="hidden" name="_subject" value="Nouvelle demande d'audit - SOFTWARE TESTING" />
+        <input type="hidden" name="_captcha" value="false" />
+        <input type="hidden" name="_next" value="https://celadon-gecko-bed4f1.netlify.app/" />
+
+        <div style="display:flex; gap:12px;">
+          <input type="text" name="nom" placeholder="Votre nom *" required style="flex:1; padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;" />
+          <input type="email" name="email" placeholder="Email *" required style="flex:1; padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;" />
+        </div>
+
+        <div>
+          <label style="display:block; margin-bottom:8px; font-weight:bold; color:#2d3748;">Type de demande *</label>
+          <select name="type_demande" required style="width:100%; padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;">
+            <option value="">-- Sélectionnez --</option>
+            <option value="Audit express 2h">Audit express 2h</option>
+            <option value="Optimisation des tests">Optimisation des tests</option>
+            <option value="CI/CD Automation">CI/CD Automation</option>
+            <option value="Automatisation de tests">Automatisation de tests</option>
+            <option value="Tests de sécurité">Tests de sécurité</option>
+            <option value="Autre demande">Autre demande</option>
+          </select>
+        </div>
+
+        <input type="text" name="entreprise" placeholder="Entreprise / Contexte" style="padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;" />
+
+        <div>
+          <label style="display:block; margin-bottom:8px; font-weight:bold; color:#2d3748;">Stack technique *</label>
+          <select name="stack_technique" required style="width:100%; padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;">
+            <option value="">-- Sélectionnez --</option>
+            <option value="Java">Java</option>
+            <option value="Python">Python</option>
+            <option value="JavaScript / Node.js">JavaScript / Node.js</option>
+            <option value="C# / .NET">C# / .NET</option>
+            <option value="Go">Go</option>
+            <option value="Autre">Autre</option>
+          </select>
+        </div>
+
+        <div style="border:2px solid #e0e0e0; padding:12px; border-radius:6px; background:#fafafa;">
+          <label style="display:block; margin-bottom:10px; font-weight:bold; color:#2d3748;">Vos points de douleur</label>
+          <div style="display:flex; flex-direction:column; gap:8px;">
+            <label style="display:flex; align-items:center; color:#2d3748; cursor:pointer;">
+              <input type="checkbox" name="douleur" value="Tests trop lents" style="margin-right:8px; width:18px; height:18px; cursor:pointer;" />
+              Tests trop lents
+            </label>
+            <label style="display:flex; align-items:center; color:#2d3748; cursor:pointer;">
+              <input type="checkbox" name="douleur" value="Trop de bugs en production" style="margin-right:8px; width:18px; height:18px; cursor:pointer;" />
+              Trop de bugs en production
+            </label>
+            <label style="display:flex; align-items:center; color:#2d3748; cursor:pointer;">
+              <input type="checkbox" name="douleur" value="Pas d'automatisation" style="margin-right:8px; width:18px; height:18px; cursor:pointer;" />
+              Pas d'automatisation
+            </label>
+            <label style="display:flex; align-items:center; color:#2d3748; cursor:pointer;">
+              <input type="checkbox" name="douleur" value="CI/CD instable" style="margin-right:8px; width:18px; height:18px; cursor:pointer;" />
+              CI/CD instable
+            </label>
+            <label style="display:flex; align-items:center; color:#2d3748; cursor:pointer;">
+              <input type="checkbox" name="douleur" value="Manque de couverture de tests" style="margin-right:8px; width:18px; height:18px; cursor:pointer;" />
+              Manque de couverture de tests
+            </label>
+            <label style="display:flex; align-items:center; color:#2d3748; cursor:pointer;">
+              <input type="checkbox" name="douleur" value="Tests difficiles à maintenir" style="margin-right:8px; width:18px; height:18px; cursor:pointer;" />
+              Tests difficiles à maintenir
+            </label>
+          </div>
+        </div>
+
+        <textarea name="description" rows="3" placeholder="Décrivez brièvement vos besoins..." style="padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748; resize:vertical;"></textarea>
+
+        <input type="tel" name="telephone" placeholder="Téléphone (optionnel)" style="padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;" />
+
+        <button type="submit" style="padding:14px; border:none; border-radius:6px; font-weight:bold; background: linear-gradient(135deg, #000000, #1a1a1a); color:#fff; cursor:pointer; transition:all 0.2s; font-size:1rem;">📩 Envoyer ma demande</button>
+        
+        <p style="font-size:0.85rem; color:#64748b; text-align:center; margin:0;">Nous traiterons votre demande dans les 24h</p>
       </form>
     </div>
   </section>
