--- a/index.html
+++ b/index.html
@@ -619,9 +619,9 @@ langSelector.addEventListener("change", () => {
         <input type="hidden" name="_captcha" value="false" />
         <input type="hidden" name="_next" value="https://celadon-gecko-bed4f1.netlify.app/" />
 
-        <div class="row-two" style="display:flex; gap:12px;">
-          <input type="text" name="nom" placeholder="Votre nom *" required style="flex:1; padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;" />
-          <input type="email" name="email" placeholder="Email *" required style="flex:1; padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;" />
+        <div class="row-two" style="display:flex; flex-direction:column; gap:12px;">
+          <input type="text" name="nom_prenom" placeholder="Nom et prénom *" required style="width:100%; padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;" />
+          <input type="email" name="email" placeholder="Email *" required style="width:100%; padding:12px; border-radius:6px; border:2px solid #000000; font-size:1rem; background:#f8f9fa; color:#2d3748;" />
         </div>
 
         <div>
